# dev-aem-crew-sys

./: AEM_AGENT_SETUP.md  IMPROVEMENTS.md  MIXED_LLM_SETUP.md  README.md  REALTIME_LOGS_GUIDE.md  SETUP_COMPLETE.md  USAGE.md  aem-agent-prompt.md  aem_build_log.txt  aem_component_files.txt  aem_component_selection.txt  aem_testing_report.txt  app.py  component_list.txt  component_summary.txt  design_analysis.txt  pyproject.toml  requirements.txt  resolve_aem.txt  resolve_express.txt  resolve_next.js.txt  resolve_react.txt  resolve_vue.txt  test_aem_agent.py  test_context7.py  test_context7_debug.py  test_fix.py  test_improvements.py  test_resolve_lib.py  test_result_aem.txt  test_result_react.txt  test_streamlit_logs.py
.claude/: settings.local.json
knowledge/: aem_component_patterns.md  aem_validation_checklist.md  common_mistakes.md  htl_reference.md  mohh_project_standards.md
output/: button-primary.html  button-secondary.html  cta-button-primary.html  hero-section.html  navbar.html
output-aem_alchemist/: 01_component_definition.txt  02_htl_template.txt  03_sling_model.txt  04_dialog.txt  05_scss.txt  06_javascript.txt
output-ui_architect/: component_spec.md  component_specification.md  component_summary.txt  hero-section.html  main-navbar.html
output-visual_strategist/: design_analysis.json  design_analysis.md
src/dev_aem_crew_sys/: crew.py  fix_rich.py  main.py
src/dev_aem_crew_sys/config/: agents.yaml  tasks.yaml
src/dev_aem_crew_sys/tools/: aem_file_writer_tool.py  context7_tool.py  directory_list_tool.py  file_reader_tool.py  file_writer_tool.py  (+4 more)
